fix scrolling on mobile

--- a/Css Grid - Ludo Game UI/ludo.css
+++ b/Css Grid - Ludo Game UI/ludo.css
@@ -376,8 +376,10 @@ body {
 @media screen and (max-width: 767px) {
     body {
         background: linear-gradient(to right, #bdc3c7, #2c3e50);
-        margin: 1px;
+        margin: .5px;
         /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        overflow-x: hidden;
+        overflow-y: hidden;
     }
 
     .container {
